This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

16-Nov-2002 (Lars Duening)  (3.3.303)
  - (gcollect.c) The cleanup code could forget to free a destructed object.

15-Nov-2002 (Lars Duening)  (3.3.302)
  - (comm.c) The call to remove_flush_entry() could clobber the list
      of players to flush if it was called for a player not in the
      flush list.

15-Nov-2002 (Lars Duening)  (3.3.301)
  - (prolang.y) After removing the linenumber information for an inline
      closure from the LINENUMBER memory block, the compiler forgot to
      adjust the size of the block accordingly (reported by Zonk and
      Guandalug).

15-Nov-2002 (Lars Duening)  (3.3.300)
  - (gcollect.c) He - the new cleanup was permanently disable due to
      a typo on the #ifdef expression. Ah, the joys of using the
      C preprocessor...

14-Nov-2002 (Lars Duening)  (3.3.299)
  - (swap.c) Swapping strings during a GC could crash the driver.

13-Nov-2002 (Lars Duening)  (3.3.298)
  - (sprintf.c) Corrected an off-by-one error which sometimes clobbered
      the result of sprintf().
  - (efuns.c) get_type_info(,2) on an unbound-lambda crashed the driver
      because an uninitialized variable was used (thanks, Ctx!)
  - (simulate.c) If the H_NOECHO hook is set, the telnet negotiations
      are redirected only after the hook setting is verified (thanks,
      Fiona!)
  - (comm.c) Corrected a potential problem when an interactive object
      with pending data is forcefully made non-interactive: from my
      reading of the code it seems that the object remained in the
      list of players-to-flush, even though it no longer had a valid
      interactive_t attribute.

13-Nov-2002 (Lars Duening)  (3.3.297)
  - (backend.c) Reset and swapped objects are data-cleaned only
      every time_to_clean_up seconds (or 3600 seconds if no cleanup
      time is set); active objects are data-cleaned every time