@@ -23,12 +23,12 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 303)
-(Parent-Version lpmud 3-3 302)
-(Version-Log "The cleanup code could forget to free a destructed object.")
+(Project-Version lpmud 3-3 304)
+(Parent-Version lpmud 3-3 303)
+(Version-Log "The fatally-out-of-memory handling accidentally triggered the multiple-threads safety check.")
 (New-Version-Log
 "")
-(Checkin-Time "Sat, 16 Nov 2002 11:32:45 -0700")
+(Checkin-Time "Sat, 16 Nov 2002 21:35:46 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -64,7 +64,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.50 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.366 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.367 644))
   (HISTORY (lpmud/f/49_HISTORY 1.284 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.18 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -219,7 +219,7 @@
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.15 644))
   (src/port.c (lpmud/39_port.c 1.17.1.7 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.17 644))
-  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.1 644))
+  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.2 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
   (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7.1.1 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
@@ -232,7 +232,7 @@
   (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.31 644))
   (src/simulate.c (lpmud/31_simulate.c 1.88.1.89 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.10 644))
-  (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.53 644))
+  (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.54 644))
   (src/sprintf.h (lpmud/f/15_sprintf.h 1.3.1.3 644))
   (src/sprintf.c (lpmud/28_sprintf.c 1.31.1.44 644))
   (src/strfuns.h (lpmud/b/51_strfuns.h 1.11.1.4 644))
